# copperhead_flight_sw

./: .clang-tidy  .git-blame-ignore-revs  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yaml
api/: adc_base.h  imu_base.h  mag_base.h  phy_base.h
applications/: CMakeLists.txt
applications/example/: main.cpp
ci/: Dockerfile  build_cross.sh  build_native.sh  check_format.sh  lint_target.sh
drivers/: CMakeLists.txt  README.md
drivers/adc/: adc.cpp  adc.h  ads1158.h
drivers/ads1158/: ads1158.c  ads1158.h
drivers/ads1158_driver/: Makefile  ads1158.c  ads1158.h
drivers/bmm350/: bmm350.c  bmm350.h
drivers/imu/: imu.cpp  imu.h
drivers/lan8742a/: lan8742a.c  lan8742a.h
drivers/lan8742a_driver/: LAN8742A.c  LAN8742A.h  Makefile
drivers/mag/: bmm350.c  mag.cpp  mag.h
drivers/phy/: phy.cpp  phy.h
ext/: CMakeLists.txt  README.md
ext/config/: FreeRTOSConfig.h
hal/: CMakeLists.txt  README.md
hal/config/: stm32_assert.h  stm32h7xx_hal_conf.h
hal/startup/stm32h730/: STM32H730XX_FLASH.ld
hal/startup/stm32h753/: STM32H753XX_FLASH.ld
simulations/: CMakeLists.txt
simulations/adc/: adc.cpp  adc.h
simulations/imu/: imu.cpp  imu.h
simulations/mag/: mag.cpp  mag.h
simulations/phy/: phy.cpp  phy.h
toolchain/: arm-none-eabi.cmake
tools/: format.sh
